--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Kunraghat gorakhpur, ph no:+917704870710
                         <a href="mailto:name@email.com">pankajdubey.java@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I wish to contribute towards orginzations goals through my technical skills, hard works, and creativity <div class="social-icons">
+                    <p class="lead mb-5">I wish to contribute towards organizationsjjjjjj goals through my technical skills, hard works, and creativity <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/pankaj-d-875995192/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/pankajdubeyjava"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/pankajd85856179"><i class="fab fa-twitter"></i></a>
