--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Kunraghat gorakhpur, ph no:+917704870710
                         <a href="mailto:name@email.com">pankajdubey.java@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I wish to contribute towards organizations goals through my technical skills, hard works, and creativity <div class="social-icons">
+                    <p class="lead mb-5">I wish to contribute towards the organization's goals through my technical skills, hard works, and creativity <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/pankaj-d-875995192/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/pankajdubeyjava"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/pankajd85856179"><i class="fab fa-twitter"></i></a>
@@ -65,7 +65,7 @@
                             <h3 class="mb-0">INTERNSHIP</h3>
                             <div class="subheading mb-3">National Institute Of Electronics And Information Technology</div>
                             <p> An autonomous scientific society of ministry of electronics <br> and information technology(meity), Govt. of India  <br>
-                             Enterprise Network Administrator and System Security <br> (A Practical Approache)           </div>
+                             Enterprise Network Administrator and System Security <br> (A Practical Approache) <br> Contact: Abhinav Mishra - abhinav@nielit.gov.in          </div>
                         <div class="flex-shrink-0"><span class="text-primary">DATE: 06/2019 - 07/2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -77,11 +77,11 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"></h3>
-                            <div class="subheading mb-3"></div>
-                            <p>                    </p>
+                            <h3 class="mb-0">National Cadet Corps</h3>
+                            <div class="subheading mb-3">certificate-A</div>
+                            <p> Army school                   </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">       </span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">DATE: 05/2010 - 07/2011       </span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -97,7 +97,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Techniacl Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student at BUNDELKHAND INSTITUTE OF ENGINEERING AND TECHNOLOGY, JHANSI</h3>
@@ -118,6 +118,30 @@
                 </div>
             </section>
             <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Intermediate (12th)</h3>
+                            <div class="subheading mb-3">Courses: PCM</div>
+                            <div>Date:06/2012 - 05/2015</div>
+                            <p></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Gorakhpur/CBSE/53%</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">High school</h3>
+                            <div class="subheading mb-3">Army School</div>
+                            <p>Date:05/2010 - 05/2012</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Gorakhpur/ CBSE/ 6.2CGPA</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
@@ -133,19 +157,27 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            C++
+                          Programming c, c++, python, javascript
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Python
+                           Operating Systems
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Problem-Solving
+                           Algorithms
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Communication
+                        </li>
+                        <li>
+                         <span class="fa-li"><i class="fas fa-check"></i></span>
+                          Network Administration
+                        </li>
+                         <li>
+                         <span class="fa-li"><i class="fas fa-check"></i></span>
+                          System security
                         </li>
                     </ul>
                 </div>
@@ -157,11 +189,9 @@
                     <h2 class="mb-5">Interests</h2>
                     <p> Effective technical and
                         problem-solving skills <br>
-                        Full stack web <br>
-                        Game development <br>
-                        Automobile engine manufacturers <br>
-                        system security <br>
-                        enterprise network administrator
+                        Web development <br>
+                       AI & Machine Learning <br>
+                        Automobile engine manufacturers
                     </p>
                     <p class="mb-0">               </div>
             </section>
