--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                          Programming c, c++, python, javascript
+                          Programming: c, c++
+                        </li>
+                         <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                          Programming: python, javascript
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
