--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Kunraghat gorakhpur, ph no:+917704870710
-                        <a href="mailto:name@email.com">pankajdubey.java@gmail.com</a>
+                        <a href="mailto:name@email.com">pankajpd09@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I wish to contribute towards the organization's goals through my technical skills, hard works, and creativity <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/pankaj-d-875995192/"><i class="fab fa-linkedin-in"></i></a>
