--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/pankaj-d-875995192/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/pankajdubeyjava"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/pankajd85856179"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/pankajjava?ref=bookmarks"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/panka.dubey.587"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
