--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Student at BUNDELKHAND INSTITUTE OF ENGINEERING AND TECHNOLOGY, JHANSI</h3>
                             <div class="subheading mb-3">Bachelor of computer Science and engineering</div>
-                            <div>Computer Science</div>
-                            <p>pursuing</p>
+                            <div>Computer Science and Engineering</div>
+                            <p>70%</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - May 2021</span></div>
                     </div>
