--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <ul class="fa-ul mb-0">
+                         <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                           Network Programmer
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                           Effective technical and
@@ -204,10 +208,6 @@ problem-solving skills
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                           AI & Machine Learning
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                           AI & Machine Learning
                         </li>
                     </ul>
                     <p class="mb-0">               </div>
