--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <h3 class="mb-0">INTERNSHIP</h3>
                             <div class="subheading mb-3">Exposys Data Labs</div>
                             <p> Software Company <br>
-                             Position> Software Developer <br> Encrypted-live-chat-application and Confirming the identity of the sers <br>
+                             Position> Software Developer <br> Encrypted-live-chat-application and Confirming the identity of the users <br>
                                 Contact: +917795207065 - hr@exposysdata.com       </div>
                         <div class="flex-shrink-0"><span class="text-primary">DATE: 06/2021 - 07/2021</span></div>
                     </div>
@@ -88,15 +88,6 @@
                         <div class="flex-shrink-0"><span class="text-primary">DATE: 06/2019 - 07/2019</span></div>
                     </div>
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">                    </h3>
-                            <div class="subheading mb-3">            </div>
-                            <p>           </p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">                 </span></div>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -136,6 +127,7 @@
                             <p></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Noida, India</span></div>
+                       </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Exposys Data Labs</h3>
@@ -154,7 +146,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Gorakhpur,India</span></div>
                     </div>
-                    
+                    </div>
 
             </section>
             <hr class="m-0" />
@@ -214,8 +206,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                          Effective technical and
-problem-solving skills
+                          Effective problem-solving skills
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
