--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Kunraghat gorakhpur, ph no:+917704870710
                         <a href="mailto:name@email.com">pankajpd09@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am adaptable to working with many approaches, and I am a highly creative individual who always takes alternative pathways to master new skills. So, if I need to, I can apply everything all at once, which I don't want to do by heart. I enjoy learning new things since it is hard, and I enjoy challenges<br>software engineer at telesys software<div class="social-icons">
+                    <p class="lead mb-5">software developer at telesys software<br>I am adaptable to working with many approaches, and I am a highly creative individual who always takes alternative pathways to master new skills. So, if I need to, I can apply everything all at once, which I don't want to do by heart. I enjoy learning new things since it is hard, and I enjoy challenges<div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/pankaj-d-875995192/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/pankajdubeyjava"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/pankajd85856179"><i class="fab fa-twitter"></i></a>
@@ -173,11 +173,11 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                           Operating Systems
+                            Network Programming
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                           Algorithms
+                            System security
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -185,11 +185,11 @@
                         </li>
                         <li>
                          <span class="fa-li"><i class="fas fa-check"></i></span>
-                          Network Administration
+                         linux Operating Systems
                         </li>
                          <li>
                          <span class="fa-li"><i class="fas fa-check"></i></span>
-                          System security
+                         Algorithms
                         </li>
                     </ul>
                 </div>
