--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">INTERNSHIP</h3>
+                            <h3 class="mb-0">CURRENTLY WORKING IN</h3>
                             <div class="subheading mb-3">Telesys Software</div>
                             <p> Product-based company( telecom products) <br> Position> software engineer <br>
-                             Network programming<br> Contact: hr Anshu mahajan - anshu.mahajan@telesys.com  </div>
-                        <div class="flex-shrink-0"><span class="text-primary">DATE: 09/2021 - 12/2021</span></div>
+                             Golang Developer<br> Contact: hr Anshu mahajan - anshu.mahajan@telesys.com  </div>
+                        <div class="flex-shrink-0"><span class="text-primary">DATE: 09/2021 - 04/2022</span></div>
                     </div>
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -122,7 +122,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Telesys Software</h3>
-                            <div class="subheading mb-3">https://shorturl.at/fAEHW</div>
+                            <div class="subheading mb-3"><a href="https://shorturl.at/fAEHW">CERTIFICATES</a></div>
                             <div>Date:09/2021 - 12/2021</div>
                             <p></p>
                         </div>
@@ -131,7 +131,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Exposys Data Labs</h3>
-                            <div class="subheading mb-3">https://shorturl.at/ahkwV</div>
+                            <div class="subheading mb-3"><a href="https://shorturl.at/ahkwV">CERTIFICATES</a></div>
                             <div>Date:06/2021 - 06/2021</div>
                             <p></p>
                         </div>
@@ -140,7 +140,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">National institute of electronics and information technology</h3>
-                            <div class="subheading mb-3">https://shorturl.at/bgjEU</div>
+                            <div class="subheading mb-3"><a href="https://shorturl.at/bgjEU">CERTIFICATES</a></div>
                             <div>Date:06/2019 - 07/2019</div>
                             <p></p>
                         </div>
@@ -169,7 +169,7 @@
                         </li>
                          <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                          Programming: python, javascript
+                          Programming: Golang,python, javascript
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
