--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">National institute of electronics and information technology</h3>
-                            <div class="subheading mb-3"><a href="https://shorturl.at/bgjEU">CERTIFICATES</a></div>
+                            <div class="subheading mb-3"></div>
                             <div>Date:06/2019 - 07/2019</div>
                             <p></p>
                         </div>
