--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">CERTIFICATES</h2>
-                   /* <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Telesys Software</h3>
-                            <div class="subheading mb-3"><a href="https://shorturl.at/fAEHW">CERTIFICATES</a></div>
+                            <div class="subheading mb-3"></div>
                             <div>Date:09/2021 - 12/2021</div>
                             <p></p>
-                        </div>*/
+                        </div>
                         <div class="flex-shrink-0"><span class="text-primary">Noida, India</span></div>
                        </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
