--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Exposys Data Labs</h3>
-                            <div class="subheading mb-3"><a href="shorturl.at/akuKR">CERTIFICATES</a></div>
+                            <div class="subheading mb-3"><a href="https://shorturl.at/akuKR">CERTIFICATES</a></div>
                             <div>Date:06/2021 - 06/2021</div>
                             <p></p>
                         </div>
